force-app/main/default/objects/Practitioner_Equipment__c/Practitioner_Equipment__c.object-meta.xml
<CustomObject>
    <label>Practitioner Equipment</label>
    <nameField>
        <displayFormat>EQ{0000000}</displayFormat>
        <label>Practitioner Equipment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Practitioner Equipments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>