force-app/main/default/objects/Practitioner_Equipment__c/fields/Type_of_Equipment__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Equipment__c</fullName>
    <label>Type of Equipment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Antenatal demonstration doll</fullName>
            </value>
            <value>
                <fullName>Ardo Belly Ball</fullName>
            </value>
            <value>
                <fullName>Ardo Belly Ball With Breast</fullName>
            </value>
            <value>
                <fullName>Birthing ball (65cm)</fullName>
            </value>
            <value>
                <fullName>Birthing ball (75cm)</fullName>
            </value>
            <value>
                <fullName>Breastfeeding positioning doll</fullName>
            </value>
            <value>
                <fullName>Breastfeeding step-by-step poster (A3)</fullName>
            </value>
            <value>
                <fullName>Breastfeeding step-by-step teaching cards</fullName>
            </value>
            <value>
                <fullName>Foot Pump</fullName>
            </value>
            <value>
                <fullName>Labour and birth positions - 2 posters (A2)</fullName>
            </value>
            <value>
                <fullName>NCT stages of labour cross sectional charts</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pelvis</fullName>
            </value>
            <value>
                <fullName>Peterkin demonstration doll</fullName>
            </value>
            <value>
                <fullName>Positions for labour and birth teaching cards (A4)</fullName>
            </value>
            <value>
                <fullName>Positions for labour and birth teaching cards (A5)</fullName>
            </value>
            <value>
                <fullName>Real Baby Milk &#39;Breastfeeding for mums by mums&#39; DVD</fullName>
            </value>
            <value>
                <fullName>What’s in a nappy poster (A3)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>