force-app/main/default/objects/Practitioner_Equipment__c/validationRules/Description_is_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Description_is_Mandatory</fullName>
    <active>true</active>
    <description>Description is mandatory if &#39;Other&#39; Equipment type is chosen</description>
    <errorConditionFormula>IF(AND(ISPICKVAL(Type_of_Equipment__c , &#39;Other&#39;), ISBLANK( Description__c )), true , false)</errorConditionFormula>
    <errorMessage>Description is mandatory if &#39;Other&#39; Equipment type is chosen</errorMessage>
</ValidationRule>